CSS for progress bar labels fixed so no wrap occurs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6286,9 +6286,14 @@ ul.dropdown-menu, a.dropdown-menu {
 #website {
   padding: 10px; }
 
+/* Links and buttons */
 #viewReport a:visited, #viewReport a:hover, #viewReport a:link, #viewReport a:active {
   color: #fff;
   text-decoration: none; }
+
+.reportControls {
+  width: 130px;
+  margin-top: 20px; }
 
 #resultsSmall button a {
   color: #fff;
@@ -6298,7 +6303,7 @@ ul.dropdown-menu, a.dropdown-menu {
   margin: 3px; }
 
 .badData {
-  color: #337ab7;
+  color: #217BDB;
   cursor: pointer; }
 
 .close {
@@ -6309,34 +6314,10 @@ ul.dropdown-menu, a.dropdown-menu {
   color: #fff;
   opacity: .4; }
 
-.resultsPreview1 {
-  display: inline-block;
-  /* background-color:#474343; */
-  color: #fff;
-  z-index: 5;
-  padding-top: 10px; }
+#closeResults {
+  margin-top: 10px; }
 
-.resultsPreview2 {
-  display: inline-block;
-  font-size: 14px;
-  /* background-color:#474343; */
-  color: #fff;
-  z-index: 5;
-  padding-top: 10px; }
-
-.bottomSpace {
-  margin-bottom: 10px; }
-
-.topSpace {
-  padding-top: 15px; }
-
-li {
-  margin: 0 0 10px 0; }
-
-.resultsButtonToolbar {
-  float: right;
-  margin-top: 3px; }
-
+/* Preview results drawer column formatting */
 #resultsSmall {
   background-color: rgba(0, 0, 0, 0.75);
   font-size: 18px;
@@ -6348,6 +6329,28 @@ li {
   position: absolute;
   bottom: 0;
   overflow: scroll; }
+
+.resultsPreview1 {
+  display: inline-block;
+  color: #fff;
+  z-index: 5;
+  padding-top: 10px; }
+
+.resultsPreview2 {
+  display: inline-block;
+  font-size: 14px;
+  color: #fff;
+  z-index: 5;
+  padding-top: 10px; }
+
+.bottomSpace {
+  margin-bottom: 10px; }
+
+.topSpace {
+  padding-top: 15px; }
+
+ol.getstarted > li {
+  margin: 0 0 10px 0; }
 
 .resultsGeneral {
   text-align: center; }
@@ -6361,22 +6364,13 @@ li {
   color: #fff;
   margin-bottom: 10px; }
 
+/* Text formatting */
 .valueHelp {
   color: #ff7400;
   font-weight: bold;
   font-size: 18px; }
 
-#closeResults {
-  margin-top: 10px; }
-
-.reportControls {
-  width: 130px;
-  margin-top: 20px; }
-
-.resultsTables {
-  height: 300px;
-  overflow: auto; }
-
+/* Progress bar */
 .gradient {
   height: 40px;
   text-align: center;
@@ -6410,19 +6404,29 @@ li {
 .showGradient > span {
   line-height: 40px; }
 
-.zeroPercent {
-  float: left;
-  margin-right: 5px; }
-
-.hundredPercent {
-  float: right;
-  margin-left: 5px; }
-
 .progress-width {
-  width: 90%; }
+  width: 98%; }
 
 .progress {
   margin-bottom: 0px; }
+
+/* Poor<->Optimal labels */
+.progress-labels {
+  font-size: 10px;
+  margin-top: -2px; }
+
+div.progress-labels > div {
+  border-left: 2px solid white;
+  display: inline-block; }
+
+#labelPoor {
+  width: 70%; }
+
+#labelFair, #labelGood, #labelOptimal {
+  width: 10%; }
+
+#labelOptimal {
+  border-right: 2px solid white; }
 
 /* D3 customization */
 .x.axis text, .y.axis text {
@@ -6481,13 +6485,6 @@ li {
 
 .chart {
   margin-left: 50px; }
-
-.shadowCSS {
-  box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.5); }
-
-.shadowfilter {
-  -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
-  filter: url(shadow.svg#drop-shadow); }
 
 #headerBar {
   height: 50px;
