--- a/styles/_resultsSmall.scss
+++ b/styles/_resultsSmall.scss
@@ -1,11 +1,16 @@
+/* Links and buttons */
+
 #viewReport a:visited, #viewReport a:hover, #viewReport a:link, #viewReport a:active{
-  //font-size: 18px;
   color: #fff;
   text-decoration:none;
 }
 
+.reportControls {
+    width:130px;
+    margin-top:20px;
+}
+
 #resultsSmall button a{
-    //font-size: 14px;
     color: $text-color;
     text-decoration: none;
 }
@@ -15,7 +20,7 @@
 }
 
 .badData {
-    color: $brand-primary;
+    color: $doc-blue;
     cursor: pointer;
 }
 
@@ -29,16 +34,27 @@
     opacity: .4;
 }
 
-// #emailReport a:visited, #emailReport a:hover, #emailReport a:link, #emailReport a:active{
-//   font-size: 18px;
-//   color: #fff;
-//   text-decoration:none;
-// }
+#closeResults {
+    margin-top:10px;
+}
+
+/* Preview results drawer column formatting */
+
+#resultsSmall {
+    background-color:$overlay;
+    font-size:18px;
+    color:#fff;
+    z-index:299;
+    border-top:1px solid #fff;
+    height:400px;
+    width:100%;
+    position:absolute;
+    bottom: 0;
+    overflow: scroll;
+}
 
 .resultsPreview1 {
     display:inline-block;
-    //font-size:14px;
-   /* background-color:#474343; */
     color:#fff;
     z-index:5;
     padding-top:10px;
@@ -48,7 +64,6 @@
 .resultsPreview2 {
     display:inline-block;
     font-size:14px;
-   /* background-color:#474343; */
     color:#fff;
     z-index:5;
     padding-top:10px;
@@ -63,33 +78,8 @@
     padding-top:15px;
 }
 
-li {
+ol.getstarted > li {
     margin:0 0 10px 0;
-}
-
-// .resultsTable {
-//     margin-left:50px
-// }
-
-.resultsButtonToolbar{
-    float:right;
-    margin-top: 3px;
-}
-
-#resultsSmall {
-    // display:none;
-    background-color:$overlay;
-    font-size:18px;
-    color:#fff;
-    z-index:299;
-    border-top:1px solid #fff;
-    height:400px;
-    width:100%;
-    position:absolute;
-    bottom: 0;
-    overflow: scroll;
-    // Add top gutter to match right/left
-    // padding-top:15px;
 }
 
 .resultsGeneral {
@@ -97,7 +87,6 @@ li {
 }
 
 .chartTitle{
-    //text-align: center;
     padding-left: 50px;
 }
 
@@ -106,8 +95,9 @@ li {
     margin-top: 10px;
     color: $secondary-color;
     margin-bottom: 10px;
-    //text-align: center;
 }
+
+/* Text formatting */
 
 .valueHelp {
     color: $link-color;
@@ -115,19 +105,7 @@ li {
     font-size: 18px;
 }
 
-#closeResults {
-    margin-top:10px;
-}
-
-.reportControls {
-    width:130px;
-    margin-top:20px;
-}
-
-.resultsTables {
-    height:300px;
-    overflow:auto;
-}
+/* Progress bar */
 
 .gradient {
     height: 40px;
@@ -157,26 +135,34 @@ li {
     line-height: 40px;
 }
 
-.zeroPercent {
-    float:left;
-    margin-right: 5px;
-}
-
-.hundredPercent {
-    float:right;
-    margin-left: 5px;
-}
-
 .progress-width {
-    width: 90%;
+    width: 98%;
 }
 
 .progress {
   margin-bottom: 0px;
 }
-// .hideGradient {
-//     background-color: black;
-// }
+
+/* Poor<->Optimal labels */
+.progress-labels {
+    font-size:10px;
+    margin-top:-2px;
+}
+
+div.progress-labels > div {
+    border-left: 2px solid white;
+    display:inline-block;
+}
+
+#labelPoor {
+    width: 70%;
+}
+#labelFair, #labelGood, #labelOptimal {
+    width: 10%;
+}
+#labelOptimal {
+    border-right: 2px solid white;
+}
 
 /* D3 customization */
 
@@ -245,13 +231,4 @@ li {
 
 .chart {
     margin-left: 50px;
-}
-
-.shadowCSS { 
-  box-shadow: 12px 12px 7px rgba(0,0,0,0.5); 
-  }
-  
-.shadowfilter { 
-  -webkit-filter: drop-shadow(12px 12px 7px rgba(0,0,0,0.5));
-  filter: url(shadow.svg#drop-shadow); 
 }
